@startuml
hide circle
skinparam ClassAttributeIconSize 0
show enum

class BookList {
    - listName : String
    + BookList(String listName, \n ArrayList<Book> bookList)
    + addBook()
    + removeBook(Book book)
    + findBookByTitle(): String
    + findBooksByKeyword(String keyword): \n ArrayList<Book>
    + findBooksByCategory(String category): \n ArrayList<Book>
}

class LoanList {
    - listName : String
    + LoanList(String listName, \n ArrayList<Loan> loanList)
    + addLoan(Loan loan)
    + deleteLoan(Loan loan)
    + removeLoansByBook(Book book)
    + findLoan(Book book, String borrower): Loan
}

class Book {
    - title : String
    - author : String
    - onLoan : boolean
    - location : String
    - note : String
    + Book(String title, String author...)
}

class Loan {
    - borrowerName : String
    - returnDate : LocalDate
    - phoneNumber : String
    - email : String
    + Loan(Book book, String borrowerName...)
}

enum Condition <<enumeration>> {
    GOOD
    FAIR
    POOR
}

enum Category <<enumeration>> {
    ROMANCE
    ADVENTURE
    ACTION
    HORROR
    MYSTERY
    FICTION
    NONFICTION
    SCIFI
    EDUCATION
}

class Storage {
    - FOLDER_PATH: String
    - INVENTORY_FILE_NAME: String
    - LOAN_LIST_FILE_NAME: String
    - inventoryFilePath: String
    - loanListFilePath: String
    + saveInventory(BookList bookList)
    + saveLoans(LoanList loanList)
    + loadInventory(): ArrayList<Book>
    + loadLoans(ArrayList<book>): ArrayList<Loan>
    + validateStorage(BookList bookList, LoanList loanList)
}

class InputHandler {
    + askInput()
    - displayHelp()
    - addLoan(String[] commandArgs)
    - addBook(String[] commandArgs)
}

class InputParser {
    + extractCommandArgs(String input): String[]
    + extractAddBookArgs(String input): String[]
}
note "Other methods omitted but follow similarly for other commands." as N0

class BookKeeper {
    +main(String[] args)
    +displayWelcomeMessage()
}

note "Utility methods (getters, setters, etc.) omitted" as N1

BookList -> "*" Book : contains >
LoanList -> "*" Loan : contains >
InputHandler --> BookList
InputHandler --> LoanList
InputHandler ..> Storage
InputHandler ..> InputParser
BookKeeper ..> InputHandler
Book -> "1" Condition
Book -> "1" Category
Loan --> "1" Book
Storage ..> BookList
Storage ..> LoanList


@enduml
